--- a/index.html
+++ b/index.html
@@ -127,7 +127,25 @@
         </p>
       </div>
     </div>
-    <span class='glyphicon glyphicon-chevron-right'></span>
+    <nav id="portfolio-nav">
+      <ul class="pagination pagination-lg">
+        <li>
+          <a href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li>
+          <a href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
   <div class='row' id ='skills-bar'>
     <div class="col-md-12"><h3>Here are some of the technologies I work with. I am always seeking to learn more & grow</h3></div>
