--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
         organization develop data-driven, user-centric products.</p>
     </div>
   </div>
-  <div id ='portfolio' class='row'>
-    <h2 style='text-align:center'>Portfolio</h2>
+  <div id='portfolio' class="row">
+  <h2 style='text-align:center'>Portfolio</h2>
+  <div id ='portfolio-1' class='row'>
     <div class='col-md-6'>
       <div class='thumbnail'>
         <a href = "http://www.careertrends.com" target="_blank"><img src="./portfolio_assets/ctrends.png"></a>
@@ -113,12 +114,12 @@
       </div>
       <div class ='caption'>
         <h3>DocNote</h3>
-        <p>DocNote is a study tool geared towards students in medical school who are studying radiology. Its inspiration is the<thead>
-          result of multiple months of user research, usability testing and data-driven design. Along with two engineers and a designer, I
-          researched the interactions and behaviors of neuroradiology students at Tufts Medical Center. This involved contextual observation,
-          interviewing, task analysis, & workflow analysis. Our research revealed that students and faculty members participate in critically
+        <p>DocNote is a study tool geared towards students in medical school who are studying radiology. Its inspiration is the
+          result of multiple months of <strong>user research, usability testing and data-driven design</strong>. Along with two engineers and a designer, I
+          researched the interactions and behaviors of neuroradiology students at Tufts Medical Center. This involved <strong>contextual observation,
+          interviewing, task analysis, & workflow analysis</strong>. Our research revealed that students and faculty members participate in critically
           important conversations when looking over MRI scans; however, students had no efficient, simply, & reliable way to keep track of
-          information for these dialogues. Multiple rounds of prototyping and usability testing lead to a final wireframe design and interaction
+          information for these dialogues. Multiple rounds of <strong>prototyping and usability testing</strong> lead to a final wireframe design and interaction
           architecture for DocNote.
         </p>
         <p>
@@ -127,18 +128,53 @@
         </p>
       </div>
     </div>
-    <nav id="portfolio-nav">
+    </div>
+    <div id ='portfolio-2' class='row inactive'>
+      <div class='col-md-6'>
+        <div class='thumbnail'>
+          <img src="./portfolio_assets/rguru.jpg">
+        </div>
+        <div class ='caption'>
+          <h3>Recipe Guru</h3>
+          <p>Recipe Guru is a simple application that finds recipes based on what you have at home.
+            Users can search for recipes or upload their own creations. The final prototype for Recipe Guru
+            was done in <strong>HTML</strong> from a <strong>mobile-first perspective</strong>.
+            For more details on the user testing process, the multiple rounds of prototyping and thorough analysis download the zip file.></p>
+          <p>
+            <a href="http://www.coroflot.com/rnatraj/Recipe-Guru" class="btn btn-primary" role="button" target="_blank">See Wireframes</a>
+            <a href="https://drive.google.com/file/d/0B4kfi0cfSlHyWElZQzZjRWRvMWs/view?usp=sharing" class="btn btn-default" role="button">Download Analysis</a>
+          </p>
+        </div>
+      </div>
+      <div class='col-md-6'>
+        <div class='thumbnail'>
+          <img src="./portfolio_assets/efinder.jpg">
+        </div>
+        <div class ='caption'>
+          <h3>EventFindr</h3>
+          <p>
+            EventFindr connects people to events in their area based on their likes & dislikes. Based on a set of user-defined "likes" & dislikes,
+            EventFindr finds the perfect way to spend the day. EventFindr was prototyped using <strong>HTML</strong> from a <strong>mobile-first
+            perspective.</strong> The creation and optimization of the EventFindr prototype invovled comprehensively defining
+            the <strong>syntactic & semantic design specifications</strong> as well as multiple rounds of <strong>usability testing</strong>.
+            If you would like all the details on the design specifications & user testing process, take a look at the research paper.
+          </p>
+          <p>
+            <a href="http://www.coroflot.com/rnatraj/EventFindr" class="btn btn-primary" role="button" target="_blank">See Wireframes</a>
+            <a href="https://drive.google.com/file/d/0B4kfi0cfSlHyeVlCaXpNQ1FNRU0/view?usp=sharing" class="btn btn-default" role="button" target="_blank">Download Analysis</a>
+          </p>
+        </div>
+      </div>
+      </div>
+<!--NAV BAR FOR PAGINATION    <nav id="portfolio-nav">
       <ul class="pagination pagination-lg">
         <li>
           <a href="#" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
           </a>
         </li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
+        <li><a href="#portfolio-1">1</a></li>
+        <li><a href="#portfolio-2">2</a></li>
         <li>
           <a href="#" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
@@ -146,6 +182,7 @@
         </li>
       </ul>
     </nav>
+-->
   </div>
   <div class='row' id ='skills-bar'>
     <div class="col-md-12"><h3>Here are some of the technologies I work with. I am always seeking to learn more & grow</h3></div>
