--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class ='caption'>
           <h3>EventFindr</h3>
           <p>
-            EventFindr connects people to events in their area based on their likes & dislikes. Based on a set of user-defined "likes" & dislikes,
+            EventFindr connects people to events in their area based on their likes & dislikes. Based on a set of user-defined "likes" & "dislikes",
             EventFindr finds the perfect way to spend the day. EventFindr was prototyped using <strong>HTML</strong> from a <strong>mobile-first
             perspective.</strong> The creation and optimization of the EventFindr prototype invovled comprehensively defining
             the <strong>syntactic & semantic design specifications</strong> as well as multiple rounds of <strong>usability testing</strong>.
