--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </div>
     </div>
     </div>
-    <div id ='portfolio-2' class='row inactive'>
+    <div id ='portfolio-2' class='row'>
       <div class='col-md-6'>
         <div class='thumbnail'>
           <img src="./portfolio_assets/rguru.jpg">
@@ -166,23 +166,6 @@
         </div>
       </div>
       </div>
-<!--NAV BAR FOR PAGINATION    <nav id="portfolio-nav">
-      <ul class="pagination pagination-lg">
-        <li>
-          <a href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <li><a href="#portfolio-1">1</a></li>
-        <li><a href="#portfolio-2">2</a></li>
-        <li>
-          <a href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
--->
   </div>
   <div class='row' id ='skills-bar'>
     <div class="col-md-12"><h3>Here are some of the technologies I work with. I am always seeking to learn more & grow</h3></div>
@@ -211,7 +194,7 @@
 <div id='contact' class='row'>
   <div class="col-md-12">
     <h2>Contact Info</h2>
-    <h3>Feel free to reach me through e-mail, add me on LinkedIn, or add me on Facebook</h3>
+    <h3>Feel free to e-mail me, add me on LinkedIn, or add me on Facebook</h3>
   </div>
   <div class="col-xs-6 col-md-4">
     <a href="mailto:ron4trj@gmail.com" target="_blank"><img src="./icons/gmail.png"></a>
@@ -225,5 +208,14 @@
 </div>
 </div>
 </main>
+<footer>
+<div class="container">
+  <div class='row' id='footer'>
+    <div class="col-md-12"
+    <h4>Created & Designed by Rohan Natraj</h4>
+  </div>
+  </div>
+</div>
+</footer>
 </body>
 </html>
