--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 </div>
   <div id ="resume" class ='row'>
     <div class="col-md-6" id ="resume-icon-col">
-      <a href="https://www.visualcv.com/isc15ulyx3i/pdf" target="_blank"><img id='resume-icon' src="./icons/resume_icon.png"></a>
+      <a href="./resume/RNatrajResume.htm" target="_blank"><img id='resume-icon' src="./icons/resume_icon.png"></a>
       <div class="row">
         <div class='col-md-12'>
-          <a href='https://www.visualcv.com/isc15ulyx3i/pdf' target="_blank" class="btn btn-info btn-lg" role="button" id='resume-button'>View My Resume</a>
+          <a href='./resume/RNatrajResume.htm' target="_blank" class="btn btn-info btn-lg" role="button" id='resume-button'>View My Resume</a>
         </div>
       </div>
     </div>
