Update index for new resume version
Update index for new resume version

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div>
   <div id ="resume" class ='row'>
     <div class="col-md-6" id ="resume-icon-col">
-      <a href="./resume/RNatrajResume.htm" target="_blank"><img id='resume-icon' src="./icons/resume_icon.png"></a>
+      <a href="./resume/NatrajRohan_resume.pdf" target="_blank"><img id='resume-icon' src="./icons/resume_icon.png"></a>
       <div class="row">
         <div class='col-md-12'>
           <a href='./resume/RNatrajResume.htm' target="_blank" class="btn btn-info btn-lg" role="button" id='resume-button'>View My Resume</a>
