Update link for new resume
Update link for new resume

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <a href="./resume/NatrajRohan_resume.pdf" target="_blank"><img id='resume-icon' src="./icons/resume_icon.png"></a>
       <div class="row">
         <div class='col-md-12'>
-          <a href='./resume/RNatrajResume.htm' target="_blank" class="btn btn-info btn-lg" role="button" id='resume-button'>View My Resume</a>
+          <a href='./resume/NatrajRohan_resume.pdf' target="_blank" class="btn btn-info btn-lg" role="button" id='resume-button'>View My Resume</a>
         </div>
       </div>
     </div>
